# calculadora_pytest

calcolator_test/calculator/: __main__.py  pyproject.toml
calcolator_test/calculator/functions/: div.py  prod.py  sum.py
calcolator_test/calculator/tests/: unit_test.py
