[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Martin Flores <martinalonsofloresgonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
